# mote-vision

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  do_cmake.sh
config/: vision.json
libs/: README.md
src/: application.cpp  application.h  application.hpp  exceptions.cpp  exceptions.h  main.cpp
src/capture/: exceptions.cpp  exceptions.h
src/capture/devices/: camera.cpp  camera.h  camera.hpp  device.cpp  device.h  device.hpp  image.cpp  image.h  image.hpp
src/config/: colours.cpp  colours.h  config.cpp  config.h  http.cpp  http.h  part.cpp  part.h  videostream.cpp  videostream.h
src/data/: colour.cpp  colour.h  colour_definition.cpp  colour_definition.h  floodfillstate.cpp  floodfillstate.h  pixel.cpp  pixel.h  rect.h  segmentationcolourobject.h  serializable.h
src/http/: action.cpp  action.h  config.cpp  config.h  config.hpp  exceptions.cpp  exceptions.h  response.cpp  response.h  response.hpp  server.cpp  server.h  server.hpp
src/http/actions/: camera.cpp  camera.h  config.cpp  config.h  index.cpp  index.h  videostream.cpp  videostream.h
src/http/actions/config/: colour_definitions.cpp  colour_definitions.h
src/imgprocs/: framebufferiterator.cpp  framebufferiterator.h  segmentcolour.cpp
src/procs/: module.cpp  module.h  videostream.cpp  videostream.h  videostream.hpp
test/src/: resources.cpp  resources.h  resources.hpp
test/src/capture/devices/: camera_test.cpp  image_test.cpp
test/src/config/: colour_test.cpp  config_test.cpp  http_test.cpp  videostream_test.cpp
test/src/data/: colour_definition_test.cpp  colour_test.cpp  floodfillstate_test.cpp  pixel_test.cpp  rect_test.cpp
test/src/http/: config_test.cpp  response_test.cpp  status_test.cpp
test/src/imgprocs/: framebufferiterator_test.cpp  segmentcolour_test.cpp
test/src/procs/: module_test.cpp
